# LArPhysicsContent

./: .gitignore  CMakeLists.txt  README.md
cmake/: LArPhysicsContentConfig.cmake.in  LArPhysicsContentConfigVersion.cmake.in
data/: TMVAClassification_BDT.weights.xml  params.root
include/: AnalysisAlgorithm.h  AnalysisDataAlgorithm.h  BirksHitSelectionTool.h  DebugDefinitions.h  LArAnalysisParticle.h  LArAnalysisParticleHelper.h  LArDriftVolume.h  LArTrackHitEnergy.h  PandoraInterface.h  WriteAnalysisParticlesAlgorithm.h
include/larphysicscontent/: BirksHitSelectionTool.h  LArTrackHitEnergy.h
larphysicscontent/: AnalysisAlgorithm.cc  AnalysisAlgorithm.h  AnalysisDataAlgorithm.cc  AnalysisDataAlgorithm.h  BirksHitSelectionTool.cc  HitPurityTool.cc  HitPurityTool.h  LArAnalysisParticle.cc  LArAnalysisParticle.h  LArAnalysisParticleHelper.cc  LArAnalysisParticleHelper.h  LArFittedTrackInfo.h  LArPhysicsContent.cc  LArPhysicsContent.h  LArTrackHitValue.h  LinkDef.h  McInfoTool.cc  McInfoTool.h  TrackHitEnergyTool.cc  TrackHitEnergyTool.h  WriteAnalysisParticlesAlgorithm.cc  WriteAnalysisParticlesAlgorithm.h
larphysicscontent/LArAnalysis/: AnalysisAlgorithm.cc  AnalysisAlgorithm.h  AnalysisDataAlgorithm.cc  AnalysisDataAlgorithm.h  AnalysisNtupleAlgorithm.cc  AnalysisNtupleAlgorithm.h  CommonMCNtupleTool.cc  CommonMCNtupleTool.h  CommonNtupleTool.cc  CommonNtupleTool.h  DefaultNtupleTool.cc  DefaultNtupleTool.h  EnergyEstimatorNtupleTool.cc  EnergyEstimatorNtupleTool.h  EventValidationNtupleTool.cc  EventValidationNtupleTool.h  EventValidationTool.cc  EventValidationTool.h  HitPurityTool.cc  HitPurityTool.h  LeeAnalysisNtupleTool.cc  LeeAnalysisNtupleTool.h  McInfoTool.cc  McInfoTool.h  ParticleIdNtupleTool.cc  ParticleIdNtupleTool.h  TestTool.cc  TestTool.h  TrackHitEnergyTool.cc  TrackHitEnergyTool.h  WriteAnalysisParticlesAlgorithm.cc  WriteAnalysisParticlesAlgorithm.h
larphysicscontent/LArHelpers/: LArAnalysisHelper.cc  LArAnalysisHelper.h  LArAnalysisNtupleHelper.cc  LArAnalysisNtupleHelper.h  LArAnalysisParticleHelper.cc  LArAnalysisParticleHelper.h  LArNtupleHelper.cc  LArNtupleHelper.h  LArRootHelper.cc  LArRootHelper.h
larphysicscontent/LArNtuple/: LArBranchPlaceholder.cc  LArBranchPlaceholder.h  LArNtuple.cc  LArNtuple.h  LArNtupleRecord.h  NtupleVariableBaseTool.cc  NtupleVariableBaseTool.h
larphysicscontent/LArObjects/: LArAnalysisParticle.cc  LArAnalysisParticle.h  LArFittedTrackInfo.h  LArInteractionValidationInfo.cc  LArInteractionValidationInfo.h  LArMCMatchValidationInfo.cc  LArMCMatchValidationInfo.h  LArMCTargetValidationInfo.cc  LArMCTargetValidationInfo.h  LArRootRegistry.cc  LArRootRegistry.h  LArTrackHitValue.h
root/: BirksDataFit.c  Common.h  FitBirksData.c  ProcessEnergyFromRangeData.c  ReadPandoraNtuple.c  TMVAClassification.c
scripts/: PandoraSettings_Master_MicroBooNE.xml
settings/: PandoraSettings_Master_MicroBooNE_Ntuple.xml
src/: AnalysisAlgorithm.cxx  AnalysisDataAlgorithm.cxx  BirksHitSelectionTool.cxx  LArAnalysisParticle.cxx  LArAnalysisParticleHelper.cxx  LArPhysicsContent.cxx  WriteAnalysisParticlesAlgorithm.cxx
test/: PandoraInterface.cxx  PandoraNtuple.root  PandoraNtupleExample.root  PandoraSettings_Master_MicroBooNE.xml  PandoraSettings_NtupleTest.xml  README.md  TestNtupleTool.cc  TestNtupleTool.h  ValidateNtuple.c
